--- a/Moody-Player/FrontEnd/package.json
+++ b/Moody-Player/FrontEnd/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@tensorflow/tfjs": "^2.8.6",
     "face-api.js": "^0.22.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
