--- a/Moody-Player/FrontEnd/package.json
+++ b/Moody-Player/FrontEnd/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "@tensorflow/tfjs": "^2.8.6",
+    "axios": "^1.13.2",
     "face-api.js": "^0.22.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
